Fixed some issues with text wrapping

--- a/assets/css/Lightbox-Gallery.css
+++ b/assets/css/Lightbox-Gallery.css
@@ -14,12 +14,10 @@
   .photo-gallery h2 {
     margin-bottom: 25px;
     padding-top: 25px;
-    font-size: 24px;
   }
 }
 
 .photo-gallery .intro {
-  font-size: 16px;
   max-width: 500px;
   margin: 0 auto 40px;
 }
